--- a/src/main/resources/templates/libro/nuevo_libro.html
+++ b/src/main/resources/templates/libro/nuevo_libro.html
@@ -12,7 +12,7 @@
     </nav>
 
     <div class="container">
-        <h2>Nuevo Proveedor</h2>
+        <h2>Nuevo Libro</h2>
         <br />
         <div class="row">
             <form class="col s12" th:action="@{/libros/guardar}" th:object="${libro}" method="POST">
