--- a/src/main/resources/templates/copia/editar_copia.html
+++ b/src/main/resources/templates/copia/editar_copia.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Crear
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Actualizar
                         <i class="material-icons right">send</i>
                     </button>
                 </div>
